firefox bug: fix modal content overspill and tidy formatting

--- a/style.css
+++ b/style.css
@@ -96,11 +96,10 @@ h6 {
   word-break: keep-all;
   padding-right: 1em;
   padding-left: 1em;
+  letter-spacing: .1em;
 }
 
 /* responsiveness of text*/
-/* ================================================================ */
-
 @media (min-width: 510px){
   .home-inner h1 {
     font-size: 4.5em;
@@ -309,23 +308,31 @@ h6 {
 }
 
 .modal-content {
-  padding: 25px;
-  height: 100%;
   display: table;
-  width: 100%;
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+}
+
+@media(min-width: 800px){
+  .modal-content {
+    width: 70%;
+  }
 }
 
 .modal-header {
   display: table-cell;
   vertical-align: middle;
-  height: 20%;
-  width: 100%;
+  height: 25%;
+  min-width: 100%;
   float: left;
   clear: both;
 }
+
 .modal-body {
   display: table-cell;
-  height: 80%;
+  /*height: 75%;*/
   width: 100%;
   float: left;
   clear: both;
@@ -333,29 +340,57 @@ h6 {
 }
 
 
+
 .modal-close {
-  float: left;
+  width: 100%;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  margin-top:20px;
+  }
+
+.modal-close img {
   height: 40px;
   width: 40px;
-  padding: 10px;
-  cursor: pointer;
+  float: left;
 }
 
-@media (min-width: 800px) {
-  .modal-container {
-    width: 50%;
+@media (max-width: 800px) {
+  .em-modal-box,
+  .mw-modal-box {
+    border-top: 2px solid #534f53;
   }
 }
 
-.modal-body p {
+@media (min-width: 800px) {
+
+  .modal-container {
+    width: 50%;
+  }
+
+  .em-modal-box {
+    -webkit-box-shadow: -4px 1px 9px -4px rgba(83,79,83,1);
+    -moz-box-shadow: -4px 1px 9px -4px rgba(83,79,83,1);
+    box-shadow: -4px 1px 9px -4px rgba(83,79,83,1);
+  }
+
+  .mw-modal-box {
+    -webkit-box-shadow: 4px 1px 9px -4px rgba(83,79,83,1);
+    -moz-box-shadow: 4px 1px 9px -4px rgba(83,79,83,1);
+    box-shadow: 4px 1px 9px -4px rgba(83,79,83,1);
+  }
+
+}
+
+.project-description-container {
+  position: absolute;
+  overflow: scroll;
+
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 400;
   color: #534f53;
-  font-size: 1.25em
-}
-
-.modal-body p li {
-  width: auto;
+  font-size: 1.25em;
+  line-height: 1.25em;
 }
 
 .modal-header h2 {
@@ -370,11 +405,6 @@ h6 {
   left: 0
 }
 
-.project-description {
-  margin-top: 10%;
-  margin-bottom: 10%:
-}
-
 .modal-project-website-link {
   text-decoration: none;
   border: 1px solid #534f53;
@@ -385,4 +415,5 @@ h6 {
   text-transform: uppercase;
   font-size: 1.25em;
   margin-top: 30px;
+  display: inline-block;
 }
